<resources>
  <string name="app_name">Quran Verses Widget</string>
  <string name="widget_description">Display daily Quran verses on your home screen</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
  <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
  <string name="widget_quranverse_description" translatable="false">Display daily Quran verses on your home screen</string>
  <string name="shortcut_widget_short">Add Widget</string>
  <string name="shortcut_widget_long">Add Quran Widget to Home</string>
  <string name="shortcut_widget_disabled">Widget feature is not available</string>
  <string name="shortcut_verse_short">Fresh Verse</string>
  <string name="shortcut_verse_long">Get a New Verse</string>
</resources>